# networkstream-c

./: Makefile.am  configure.ac
src/: stringbuilder.h
tests/: test1.c  test2.c
